k8s/components/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app.kubernetes.io/managed-by: argocd
    homelab/cluster: homelab
    homelab/env: prod
    homelab/stack: media
